# Mist-Plugin

./: .dockerignore  Dockerfile  README.md  config.yaml  device_events.yaml  event_alarms.yaml  event_audits.yaml  event_devices.yaml  event_nac.yaml  event_updown.yaml  main.py  parser.py  pyproject.toml  requirements.txt  systemlog.py
config/: config.yaml  event_alarms.yaml  event_audits.yaml  event_clients.yaml  event_devices.yaml  event_nac.yaml
docs/: alarms.md  alarms.txt  audits.md  audits.txt  clients.md  clients.txt  device.md  device.txt  location.md  location.txt  nac.md  nac.txt  zone.md  zone.txt
